fix(deprecated props): align-items props set to flex-start rather start which is not supported

--- a/components/layouts/Orders/Orders.module.scss
+++ b/components/layouts/Orders/Orders.module.scss
@@ -108,7 +108,7 @@
             flex: 0.5;
             display: flex;
             justify-content: center;
-            align-items: start;
+            align-items: flex-start;
           }
 
           .item__info {
